Fixes to scroll at two panes
Was not showing all scroll, missing some data. Needed tricks to access
next at wizard.

--- a/frontend/app/sass/panes.sass
+++ b/frontend/app/sass/panes.sass
@@ -13,6 +13,7 @@
     flex-direction: column
     width: 100%
     height: 100%
+    overflow: hidden
 
   .ui.attached.top.form
     border-bottom: 1px solid #eee
